# alvie-pico

./: CMakeLists.txt  LICENSE
pico_blockdev/: CMakeLists.txt  blockdev.c  blockdev.c.save  partition.c
pico_blockdev/include/pico/: blockdev.h  blockdev.h.save
pico_object/: CMakeLists.txt
pico_object/include/pico/: object.h
pico_vfs/: CMakeLists.txt  vfs.c
pico_vfs/include/pico/: vfs.h
pico_vfs/include/sys/: dirent.h
